--- a/benchmark/analyze.ipynb
+++ b/benchmark/analyze.ipynb
@@ -8,8 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -18,8 +17,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sv_df = pd.read_csv(\"/home/tianhao/browser_pilot/benchmark/test_server_v1_merged_20250422_202721.csv\")\n",
-    "pr_df = pd.read_csv(\"/home/tianhao/browser_pilot/multiprocess_async_playwright_merged_20250422_191035.csv\")"
+    "sv_df = pd.read_csv(\n",
+    "    \"/home/tianhao/browser_pilot/benchmark/test_server_v1_merged_20250422_202721.csv\"\n",
+    ")\n",
+    "pr_df = pd.read_csv(\n",
+    "    \"/home/tianhao/browser_pilot/multiprocess_async_playwright_merged_20250422_191035.csv\"\n",
+    ")"
    ]
   },
   {
@@ -84,21 +87,31 @@
     }
    ],
    "source": [
-    "worker_input_queue_time_percentage = worker_input_queue_time.sum() / total_time.sum() * 100\n",
-    "worker_output_queue_time_percentage = worker_output_queue_time.sum() / total_time.sum() * 100\n",
+    "worker_input_queue_time_percentage = (\n",
+    "    worker_input_queue_time.sum() / total_time.sum() * 100\n",
+    ")\n",
+    "worker_output_queue_time_percentage = (\n",
+    "    worker_output_queue_time.sum() / total_time.sum() * 100\n",
+    ")\n",
     "app_to_engine_percentage = app_to_engine.sum() / total_time.sum() * 100\n",
     "engine_to_app_percentage = engine_to_app.sum() / total_time.sum() * 100\n",
-    "send_communication_time_percentage = send_communication_time.sum() / total_time.sum() * 100\n",
-    "recv_communication_time_percentage = recv_communication_time.sum() / total_time.sum() * 100\n",
+    "send_communication_time_percentage = (\n",
+    "    send_communication_time.sum() / total_time.sum() * 100\n",
+    ")\n",
+    "recv_communication_time_percentage = (\n",
+    "    recv_communication_time.sum() / total_time.sum() * 100\n",
+    ")\n",
     "worker_process_time_percentage = worker_process_time.sum() / total_time.sum() * 100\n",
     "\n",
     "print(f\"App to engine percentage: {app_to_engine_percentage:.2f}%\")\n",
     "print(f\"Send communication time percentage: {send_communication_time_percentage:.2f}%\")\n",
     "print(f\"Worker input queue time percentage: {worker_input_queue_time_percentage:.2f}%\")\n",
     "print(f\"Worker process time percentage: {worker_process_time_percentage:.2f}%\")\n",
-    "print(f\"Worker output queue time percentage: {worker_output_queue_time_percentage:.2f}%\")\n",
+    "print(\n",
+    "    f\"Worker output queue time percentage: {worker_output_queue_time_percentage:.2f}%\"\n",
+    ")\n",
     "print(f\"Recv communication time percentage: {recv_communication_time_percentage:.2f}%\")\n",
-    "print(f\"Engine to app percentage: {engine_to_app_percentage:.2f}%\")\n"
+    "print(f\"Engine to app percentage: {engine_to_app_percentage:.2f}%\")"
    ]
   },
   {
